--- a/githubprofile/package.json
+++ b/githubprofile/package.json
@@ -15,7 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -30,6 +30,6 @@
     "eslint-config-next": "14.2.15",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
